[package]
name = "eww-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battery = { package = "starship-battery", version = "0.8" }
sysinfo = "0.29"
serde_json = "1.0"
once_cell = "1.18"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock"]
