[package]
name = "eww-info"
version = "0.1.0"
edition = "2021"

[dependencies]
starship-battery = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = true, features = [] }
sysinfo = { version = "0.30", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
